display about section on html

--- a/index.html
+++ b/index.html
@@ -22,6 +22,11 @@
         </div>
       </header>
       <main class="container my-5">
+          
+  <section class="my-3" id="about">
+  <h2 class="text-dark bg-primary p-2 display-inline-block">About Me</h2>
+  <p>Duis consectetur nunc nunc. Morbi finibus non sapien nec pharetra. Fusce nec dignissim orci, ac interdum ipsum. Morbi mattis justo sed commodo pellentesque. Nulla eget fringilla nulla. Integer gravida magna mi, id efficitur metus tempus et.</p>
+  </section>
   
       </main>
       <footer class="container text-center py-3">
